Убирает кнопки удаления и редактирования карточек

--- a/style/catalog-item.css
+++ b/style/catalog-item.css
@@ -4,6 +4,10 @@
 
 /*Фото*/
 
+.catalog-item__main {
+  background-color: #202020;
+}
+
 .catalog-item__section {
   display: flex;
   flex-direction: row;
